--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -23,9 +23,32 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    testCompile 'junit:junit:4.12'
 }
+
+ext {
+    bintrayRepo = rootProject.bintrayRepo
+    bintrayName = 'lib'
+
+    publishedGroupId = rootProject.publishedGroupId
+    libraryName = bintrayName
+    artifact = bintrayName
+
+    libraryDescription = rootProject.libraryDescription
+
+    siteUrl = rootProject.siteUrl
+    gitUrl = rootProject.gitUrl
+
+    libraryVersion = rootProject.libraryVersion
+
+    developerId = rootProject.developerId
+    developerName = rootProject.developerName
+    developerEmail = rootProject.developerEmail
+
+    licenseName = rootProject.licenseName
+    licenseUrl = rootProject.licenseUrl
+    allLicenses = rootProject.allLicenses
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
