--- a/net/build.gradle
+++ b/net/build.gradle
@@ -24,6 +24,33 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "com.squareup.okhttp3:okhttp:$rootProject.ext.okhttpVersion"
-    compile project(':architect')
     compile 'com.google.code.gson:gson:2.8.1'
+    compile "com.android.support:support-fragment:25.3.1"
 }
+
+ext {
+    bintrayRepo = rootProject.bintrayRepo
+    bintrayName = 'net'
+
+    publishedGroupId = rootProject.publishedGroupId
+    libraryName = bintrayName
+    artifact = bintrayName
+
+    libraryDescription = rootProject.libraryDescription
+
+    siteUrl = rootProject.siteUrl
+    gitUrl = rootProject.gitUrl
+
+    libraryVersion = rootProject.libraryVersion
+
+    developerId = rootProject.developerId
+    developerName = rootProject.developerName
+    developerEmail = rootProject.developerEmail
+
+    licenseName = rootProject.licenseName
+    licenseUrl = rootProject.licenseUrl
+    allLicenses = rootProject.allLicenses
+}
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
